Fix build script with Node.js-based file copying for Cloudflare Pages

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
-    "build": "mkdir -p dist && cp -r frontend/* dist/",
+    "build": "node build.js",
     "build:worker": "wrangler deploy --dry-run",
     "test": "vitest",
     "test:watch": "vitest --watch",
